       - Fixed JaxRsApplication(Application) constructor with a JaxRsRestlet adapter.
       - Fixed NPE while issuing 405 responses in the JAX-RS extension.
         Reported by Daniel Halperin
       - The current response, application, context and virtual host are now properly
         restored when the representation is called back to be written by the internal
         HTTP connector.
    - Misc
       - Fixed bug when chaining Transformer or TransformRepresentation
         objects. Reported by Brian Sletten.
    - Misc
       - 

- 2.1.1 (12/23/2012)
    - Bug fixed
       - Fixed arrays serialization in GWT edition.
         Contributed by Jeff Plourde.
       - Fixed internal HTTP connector to enable handling of asynchronous
         client requests. Contributed by Florian Bucklers
       - Fixed controllerSleepTimeMs default value in documentation for 
         internal HTTP connector.
       - Fixed generation of requests in GWT edition, using the browser agent
         name by default.
       - Fixed implementation of method "getAttribute" by the ClientResource 
         and ServerResource classes (issue #695). Reported by Dennis Mitchell.
       - Fixed conversion Java Double/EDM.Double types in OData extension.
         Reported by Martin Grohmann.
       - Took care of the IPV6 addresses. Reported by Laurent Rustuel.
       - Add missing implementation in BufferingRepresentation for issue #681.
         Contributed by Florian Bucklers.
       - Added support of multiple levels of $expand in OData extension.
         Contributed by Emmanuel Liossis. 
       - Fixed potential infinite loops while reading headers
         (issues #599 and #656). Reported by Wei Wei Wang.
       - Fixed reading of Via header (issue #599).
         Reported by Nicolas Rinaudo.
       - Strict conneg should evaluate media type parameters (issue #559, #652).
         Reported and contributed by Andy Dennie.